update: [조안나] 상품 정보가 저장되어있는 csv파일을 DB에 저장해주는 시스템 [DIY-SALES-PYTHON 4]

--- a/python/product/SaveProductDBFromFile.ipynb
+++ b/python/product/SaveProductDBFromFile.ipynb
@@ -22,15 +22,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_74248\\3827430107.py:1: FutureWarning: The error_bad_lines argument has been deprecated and will be removed in a future version. Use on_bad_lines in the future.\n",
+      "C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_112788\\3827430107.py:1: FutureWarning: The error_bad_lines argument has been deprecated and will be removed in a future version. Use on_bad_lines in the future.\n",
       "\n",
       "\n",
       "  product_data = pd.read_csv('product_data.csv', engine='python', encoding='UTF-8', error_bad_lines=False, index_col=False)\n",
-      "C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_74248\\3827430107.py:2: FutureWarning: The error_bad_lines argument has been deprecated and will be removed in a future version. Use on_bad_lines in the future.\n",
+      "C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_112788\\3827430107.py:2: FutureWarning: The error_bad_lines argument has been deprecated and will be removed in a future version. Use on_bad_lines in the future.\n",
       "\n",
       "\n",
       "  product_info_data = pd.read_csv('product_info_data.csv', engine='python', encoding='UTF-8', error_bad_lines=False, index_col=False)\n",
-      "C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_74248\\3827430107.py:3: FutureWarning: The error_bad_lines argument has been deprecated and will be removed in a future version. Use on_bad_lines in the future.\n",
+      "C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_112788\\3827430107.py:3: FutureWarning: The error_bad_lines argument has been deprecated and will be removed in a future version. Use on_bad_lines in the future.\n",
       "\n",
       "\n",
       "  product_image_data = pd.read_csv('product_image_data.csv', engine='python', encoding='UTF-8', error_bad_lines=False, index_col=False)\n"
@@ -915,7 +915,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<_csv.reader object at 0x000001A096161700>\n"
+      "<_csv.reader object at 0x0000027C14C7CF40>\n"
      ]
     }
    ],
@@ -958,7 +958,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<_csv.reader object at 0x000001A098888F40>\n"
+      "<_csv.reader object at 0x0000027C14C39CA0>\n"
      ]
     }
    ],
@@ -999,7 +999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "878f4280",
    "metadata": {},
    "outputs": [
@@ -1007,7 +1007,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<_csv.reader object at 0x0000019BC396BCA0>\n"
+      "<_csv.reader object at 0x0000027C14C7CE20>\n"
      ]
     }
    ],
@@ -1045,7 +1045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "71ca713d",
    "metadata": {},
    "outputs": [],
