fix: [조안나] 상품 엔티티 컬럼 추가로 인한 상품 데이터 공유 형식 변경 [DIY-SALES-PYTHON 6]

--- a/python/product/SaveProductDBFromFile.ipynb
+++ b/python/product/SaveProductDBFromFile.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "241952aa",
    "metadata": {},
    "outputs": [
@@ -22,15 +22,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_104420\\2211914985.py:1: FutureWarning: The error_bad_lines argument has been deprecated and will be removed in a future version. Use on_bad_lines in the future.\n",
+      "C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_70248\\2211914985.py:1: FutureWarning: The error_bad_lines argument has been deprecated and will be removed in a future version. Use on_bad_lines in the future.\n",
       "\n",
       "\n",
       "  product_data = pd.read_csv('product_data2.csv', engine='python', encoding='UTF-8', error_bad_lines=False, index_col=False)\n",
-      "C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_104420\\2211914985.py:2: FutureWarning: The error_bad_lines argument has been deprecated and will be removed in a future version. Use on_bad_lines in the future.\n",
+      "C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_70248\\2211914985.py:2: FutureWarning: The error_bad_lines argument has been deprecated and will be removed in a future version. Use on_bad_lines in the future.\n",
       "\n",
       "\n",
       "  product_info_data = pd.read_csv('product_info_data2_test.csv', engine='python', encoding='cp949', error_bad_lines=False, index_col=False)\n",
-      "C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_104420\\2211914985.py:3: FutureWarning: The error_bad_lines argument has been deprecated and will be removed in a future version. Use on_bad_lines in the future.\n",
+      "C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_70248\\2211914985.py:3: FutureWarning: The error_bad_lines argument has been deprecated and will be removed in a future version. Use on_bad_lines in the future.\n",
       "\n",
       "\n",
       "  product_image_data = pd.read_csv('product_image_data2.csv', engine='python', encoding='UTF-8', error_bad_lines=False, index_col=False)\n"
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "1f40a250",
    "metadata": {},
    "outputs": [
@@ -485,7 +485,7 @@
        "49          50    쏘쏘Store   250000         학위논문 및 학술지투고 논문 지도해 드립니다."
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "7fcee8f8",
    "metadata": {},
    "outputs": [
@@ -1398,7 +1398,7 @@
        "49     10  2023-01-08 15:13         0          50  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1614,23 +1614,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "bbe5176a",
    "metadata": {},
    "outputs": [],
    "source": [
     "db = pymysql.connect(\n",
-    "    host = 'ip주소',\n",
+    "    host = '192.168.0.8',\n",
     "    port = 3306,\n",
     "    user = 'eddi',\n",
-    "    passwd = '비밀번호',\n",
+    "    passwd = 'eddi@123',\n",
     "    db = 'buy_idea_db'\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "edc9b56e",
    "metadata": {},
    "outputs": [
@@ -1638,7 +1638,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<_csv.reader object at 0x0000027C14C7CF40>\n"
+      "<_csv.reader object at 0x000002CAA3C82220>\n"
      ]
     }
    ],
@@ -1673,7 +1673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "712037a0",
    "metadata": {},
    "outputs": [
@@ -1681,12 +1681,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<_csv.reader object at 0x0000027C14C39CA0>\n"
+      "<_csv.reader object at 0x000002CAA3DA7760>\n"
      ]
     }
    ],
    "source": [
-    "f = open('product_info_data2_test.csv', 'r', encoding='UTF-8')\n",
+    "f = open('product_info_data2_test.csv', 'r', encoding='cp949')\n",
     "csv_reader = csv.reader(f, delimiter=',')\n",
     "\n",
     "print(csv_reader)\n",
@@ -1723,7 +1723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "878f4280",
    "metadata": {},
    "outputs": [
@@ -1731,7 +1731,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<_csv.reader object at 0x0000027C14C7CE20>\n"
+      "<_csv.reader object at 0x000002CAA3C82220>\n"
      ]
     }
    ],
